@@ -1,10 +1,29 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Sys-Mmap
-version:      0.13
-version_from: 
-installdirs:  site
+--- #YAML:1.0
+name:               Sys-Mmap
+version:            0.13_01
+abstract:           uses mmap to map in a file as a Perl variable
+author:
+    - Scott Walters <swalters@cpan.org>
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+    Test::More:           0
 requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.21_01
+    DynaLoader:  0
+    Test::More:  0
+    XSLoader:    0
+resources:
+    homepage:    http://wiki.github.com/toddr/Sys-Mmap
+    license:     http://dev.perl.org/licenses/
+    repository:  http://github.com/toddr/Sys-Mmap/tree/master
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
